--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,9 @@
     "modernizr": "~2.8.1",
     "chartist": "~0.9.5",
     "bower-jvectormap": "~1.2.2",
-    "react": "~0.14.6"
+    "react": "~0.14.6",
+    "world-countries": "~1.7.4",
+    "accounting.js": "~0.4.1"
   },
   "overrides": {
     "bootstrap-sass": {
