--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     }
   },
   "dependencies": {
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
+    "react-select": "^1.0.0-beta8",
     "webpack": "^1.12.10"
   }
 }
