--- a/package.json
+++ b/package.json
@@ -41,10 +41,13 @@
     }
   },
   "dependencies": {
+    "json-loader": "^0.5.4",
+    "raw-loader": "^0.5.1",
     "react": "^0.14.6",
     "react-chartist": "^0.10.1",
     "react-dom": "^0.14.6",
     "react-select": "^1.0.0-beta8",
-    "webpack": "^1.12.10"
+    "webpack": "^1.12.10",
+    "world-countries": "^1.7.4"
   }
 }
