--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "bower-jvectormap": "~1.2.2",
     "react": "~0.14.6",
     "accounting.js": "~0.4.1",
-    "react-select": "~0.9.1"
+    "react-select": "~0.9.1",
+    "underscore": "~1.8.3"
   },
   "overrides": {
     "bootstrap-sass": {
